--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
+
+html {
+  background-color: grey;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  margin-top: 23vh;
+  background-color: grey;
+}
+.drum-pads {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  color: rgb(71, 71, 71);
+  margin-left: 20px;
+}
+.drum-pad {
+  height: 90px;
+  width: 90px;
+  padding: 30px;
+  margin: 5px;
+  border-radius: 100%;
+  background-color: rgb(39, 39, 39);
+  text-align: center;
+  font-weight: bold;
+  box-shadow: 3px 3px 1px 3px #0e0e0e;
+  background: radial-gradient(#1f1f1f 50%, #282828 70%, rgb(55, 55, 55));
+}
+#drum-machine {
+  background-color: rgb(21, 21, 21);
+  display: flex;
+  flex-direction: row;
+  border-radius: 5%;
+  padding: 20px;
+  user-select: none;
+}
+#display {
+  font-size: 25px;
+  text-align: center;
+  height: 100px;
+  line-height: 100px;
+}
+#power {
+  background-color: rgb(39, 39, 39);
+  color: rgb(254, 128, 1);
+  height: 40px;
+  width: 40px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius: 50%;
+  margin: 25px auto 5px auto;
+}
+input::-webkit-slider-thumb {
+  background-color: rgb(254, 128, 1);
+  height: 20px;
+  width: 10px;
+  border-radius: 5%;
+  appearance: none;
+  transition: orange 0.3s ease-in-out;
+}
+.slider {
+  background-color: rgb(55, 55, 55);
+  height: 5px;
+  appearance: none;
+  width: 100px;
+}
+.slider::-webkit-slider-progress {
+  background-color: rgb(255, 216, 177);
+  height: 10px;
+}
+.volume {
+  font-size: 20px;
+  text-align: center;
+  padding: 5px;
+  border-top: solid 4px rgb(55, 55, 55);
+}
+.controls {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+}
+.name-volume {
+  display: flex;
+  flex-direction: column;
+  border-radius: 5%;
+  width: 150px;
+  background-color: rgb(8, 8, 8);
+  border: solid 4px rgb(55, 55, 55);
+  margin-top: 5px;
+  color: rgb(8, 8, 8);
+}
+.on {
+  color: rgb(254, 128, 1);
+  font-family: "Ubuntu Mono", monospace;
+}
+i {
+  color: rgb(254, 128, 1);
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+.volume-power {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: stretch;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 550px) {
+  #drum-machine {
+    width: 270px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
   }
-  to {
-    transform: rotate(360deg);
+  .controls {
+    display: flex;
+    flex-direction: column;
+  }
+  #power {
+    height: 30px;
+    width: 30px;
+    margin: 0;
+  }
+  .name-volume {
+    width: 100%;
+    height: 100px;
+  }
+  .drum-pads {
+    margin: 0px;
+    padding: 0;
+  }
+  .drum-pad {
+    width: 70px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #display {
+    font-size: 20px;
+    height: 50px;
+    line-height: 50px;
+  }
+  .volume-power {
+    display: flex;
+    justify-content: row;
+    align-items: center;
+    margin-top: 10px;
+    margin: 10px;
+  }
+  .icon-volume {
+    margin-right: 25px;
   }
 }
